[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "travel-map"
version = "2.0.0"
description = "A tool to generate travel map."
authors = ["hktkzyx <hktkzyx@yeah.net>"]
license = "MulanPSL-2.0"
readme = "README.md"
repository = "https://github.com/hktkzyx/travel-map"
packages = [{ include = "travel_map" }]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = { version = "^4.0.1", optional = true }
flake8-docstrings = { version = "^1.6.0", optional = true }
yapf = { version = ">=0.32.0, <1.0.0", optional = true }
commitizen = { version = "^2.21.2", optional = true }
pre-commit = { version = "^2.17.0", optional = true }
isort = { version = "^5.10.1", optional = true }
pyecharts = "^1.9.1"
pandas = "^1.4.2"
numpy = "^1.22.3"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.13"
mkdocstrings-python-legacy = "^0.2.2"
mike = "^1.1.2"

[tool.poetry.extras]
dev-tools = ["flake8", "flake8-docstrings", "yapf", "commitizen", "pre-commit", "isort"]

[tool.poetry.scripts]
travel-map = 'travel_map.scripts.commands:travel_map'

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]

[tool.yapf]
based_on_style = "pep8"
split_before_arithmetic_operator = true
split_before_named_assigns = false
indent_dictionary_value = true
split_all_top_level_comma_separated_values = true

[tool.isort]
profile = "google"

[tool.pytest.ini_options]
testpaths = ["tests", "travel_map"]
addopts = "--doctest-modules"

[tool.coverage.run]
source_pkgs = ["travel_map"]
