[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Brooks YUAN <hktkzyx@yeah.net>"]
classifiers = ["License :: OSI Approved", "Natural Language :: English", "Natural Language :: Chinese (Simplified)"]
description = "A tool to generate travel map."
documentation = "https://github.com/hktkzyx/travel-map"
homepage = "https://github.com/hktkzyx/travel-map"
license = "MulanPSL-2.0"
name = "travel-map"
readme = "README.md"
repository = "https://github.com/hktkzyx/travel-map"
version = "2.0.1"

[tool.poetry.dependencies]
click = "^8.1.3"
numpy = "^1.22.3"
pandas = "^1.4.2"
pyecharts = "^1.9.1"
pytest = {version = "^7.1.2", optional = true}
pytest-cov = {version = "^3.0.0", optional = true}
python = "^3.9"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]

[tool.poetry.dev-dependencies]
commitizen = "^2.21.2"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
toml = "^0.10.2"
yapf = ">=0.32.0, <1.0.0"

[tool.poetry.scripts]
travel-map = 'travel_map.scripts.commands:travel_map'

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "2.0.1"
version_files = ["pyproject.toml:version"]

[tool.yapf]
based_on_style = "pep8"
indent_dictionary_value = true
split_all_top_level_comma_separated_values = true
split_before_arithmetic_operator = true
split_before_named_assigns = false

[tool.isort]
profile = "google"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "travel_map"]

[tool.coverage.run]
source_pkgs = ["travel_map"]
